Fix overlapping bottom menu

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,5 @@ a {
 
 .main {
   float: left;
+  padding-bottom: 40px;
 }
